[package]
name = "rust-talk-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = "0.8.3"
lambda_runtime = "0.8.3"
serde = "1.0.192"
serde_json = "1.0.108"
tokio = { version = "1", features = ["macros"] }

[[bin]]
name = "rust_sum"
path = "src/rust_sum.rs"
